--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 		<version>1.1.0.RELEASE</version>
 		<scope>test</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>1.9</version>
+	</dependency>
 	</dependencies>
 
 	<properties>
