--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.6.RELEASE</version>
 	</parent>
-
+	
 	<dependencies>
 		<!-- WEB -->
 		<dependency>
@@ -92,6 +92,7 @@
  
 	<properties>
 		<java.version>1.8</java.version>
+		<runSuite>**/AllTests.class</runSuite>
 	</properties>
 
     <profiles>
@@ -118,6 +119,16 @@
                             <warName>ROOT</warName>
                         </configuration>
                     </plugin>
+                    <!--  surefire -->
+					<plugin>
+			            <groupId>org.apache.maven.plugins</groupId>
+			            <artifactId>maven-surefire-plugin</artifactId>
+			            <configuration>
+			                <includes>
+			                    <include>**/AllTests.java</include>
+			                </includes>
+			            </configuration>
+			        </plugin>
                 </plugins>
             </build>
         </profile>
